--- a/app/view/layout/base.njk
+++ b/app/view/layout/base.njk
@@ -14,7 +14,7 @@
     </div>
   {% endblock %}
   
-  <script src="{{ lib/requirejs/require.js | static_url}}" data-main="/public/js/common.js"></script>
+  <script src="{{ 'lib/requirejs/require.js' | static_url}}" data-main="/public/js/common.js"></script>
   {% block after_content %}{% endblock %} 
 </body>
 </html>
